Implemented simple tree graph from d3

--- a/LayerStalker/LayerStalker.csproj
+++ b/LayerStalker/LayerStalker.csproj
@@ -87,6 +87,9 @@
     <None Include="Resources\RhinoD3.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\css\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="app\index.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -94,9 +97,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="app\css\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
